...
                )
            }
        }
    }
}

internal const val TAG_ANALISE_GUIADA = "diagnostico_guiado_analise"
internal const val TAG_ANALISE_GUIADA_PLANO = "diagnostico_guiado_analise_plano"
internal const val TAG_ANALISE_GUIADA_LIMITE = "diagnostico_guiado_analise_limite"
internal const val TAG_ANALISE_GUIADA_DETERMINADO = "diagnostico_guiado_analise_progresso_determinado"
internal const val TAG_ANALISE_GUIADA_INDETERMINADO = "diagnostico_guiado_analise_progresso_indeterminado"
internal const val TAG_ANALISE_GUIADA_ETAPA = "diagnostico_guiado_analise_etapa"
internal const val TAG_ANALISE_GUIADA_CANCELAR = "diagnostico_guiado_analise_cancelar"
internal const val TAG_ANALISE_GUIADA_TENTAR_NOVAMENTE = "diagnostico_guiado_analise_tentar_novamente"

